combine all css file

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 </a>
                 <hr class="solid-divider">
 
-                <a class="nav-link mt-3 active_sidnav" href="#">
+                <a class="nav-link mt-3 nav-sidevar-link active_sidnav" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
                         <span class=" ml-2"> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link " href="#">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="ml-2"> Assign Details</span>
