--- a/projectDetails.html
+++ b/projectDetails.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projectDetails.css">
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -28,13 +27,13 @@
                 </a>
                 <hr class="solid-divider">
 
-                <a class="nav-link mt-3 " href="#">
+                <a class="nav-link mt-3 nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class=" ml-2"> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link " href="#">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape.png" alt="" class="sidebar-icon-image">
                         <span class="ml-2">Projects</span>
