--- a/manager-deshboard.html
+++ b/manager-deshboard.html
@@ -7,10 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/project.css">
-    <link rel="stylesheet" href="css/manager-deshboard.css">
-    <link rel="stylesheet" href="css/client_project_Details.css">
-
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -32,13 +28,13 @@
                 </a>
                 <hr class="solid-divider">
 
-                <a class="nav-link mt-3 active_sidnav" href="#">
+                <a class="nav-link mt-3 nav-sidevar-link active_sidnav" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
-                        <span class=" ml-2"> Dashboard</span>
+                        <span class=" ml-2">Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link " href="#">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="ml-2"> Assign Details</span>
