checked_by_projects page complete

--- a/checked_by_projects.html
+++ b/checked_by_projects.html
@@ -33,7 +33,7 @@
                         <span class=" ml-2"> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link active_sidnav" href="project.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape.png" alt="" class="sidebar-icon-image">
                         <span class="ml-2">Projects</span>
@@ -45,16 +45,16 @@
                         <span class="ml-2">Assign Details</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="mywork.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape (2).png" alt="" class="sidebar-icon-image">
                         <span class="ml-2">My Work</span>
                     </div>
                 </a>
 
-                <a class="nav-link nav-sidevar-link" href="checked_by_projects.html">
+                <a class="nav-link nav-sidevar-link active_sidnav" href="#">
                     <div class="link-icon">
-                        <img src="assets/sidebar_icon/Shape (1).png" alt="" class=" sidebar-icon-image">
+                        <img src="assets/sidebar_icon/Shape (1).png" alt="" class="sidebar-icon-image active-sidebar-icon-image">
                         <span class="ml-2">Checked By Projects</span>
                     </div>
                 </a>
@@ -101,7 +101,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link active menu-link mr-2 active_top_nav" aria-current="page" href="project.html">Project</a>
+                            <a class="nav-link active menu-link mr-2 active_top_nav" aria-current="page"
+                                href="/project.html">Project</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Client</a>
@@ -174,32 +175,29 @@
                 </div>
             </nav>
             <!-- nan-munu end -->
-            <!-- data table start  -->
-            <div class="mt-5 mx-4 data-table">
+
+              <!-- data table start  -->
+              <div class="mt-5 mx-4 data-table">
                 <div class="project-title">
-                    All Project
+                    All Task
                 </div>
                 <div class="table-parrent">
                     <table id="example" class="display" style="width:100%">
                         <thead>
                             <tr>
-                                <th class="Project-table-heading">SL</th>
-                                <th class="Project-table-heading">Project Name</th>
-                                <th class="Project-table-heading">Assign Time</th>
-                                <th class="Project-table-heading">Priority</th>
-                                <th class="Project-table-heading">Due</th>
-                                <th class="Project-table-heading">Status</th>
-                                <th class="Project-table-heading text-center">Action</th>
+                                <th class="Project-table-heading text-center">SL</th>
+                                <th class="Project-table-heading text-center">Project Name</th>
+                                <th class="Project-table-heading text-center">Status</th>
+                                <th class="Project-table-heading text-center">Image Quentity</th>
+                                <th class="Project-table-heading text-center text-center">Action</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>001</td>
-                                <td>Clipping Path</td>
-                                <td>22 Nov 2022 08:00 PM</td>
-                                <td>Medium</td>
-                                <td>Ongoing</td>
-                                <td>Time Over</td>
+                                <td class="text-center">001</td>
+                                <td class="text-center">Images Retouching</td>
+                                <td class="text-center">Pending</td>
+                                <td class="text-center">18</td>
                                 <!-- <td class="text-center">:</td> -->
                                 <td class="text-center">
                                     <div class="position-lg-relative right-3">
@@ -207,79 +205,20 @@
                                             aria-expanded="false">
                                             :
                                         </a>
-                                        <div class="dropdown-menu dropdown-menu-right  ">
-
-                                            <a href="projectDetails.html" class="dropdown-item ">Details</a>
-                                            <a href="projectDetails.html" class="dropdown-item">Reason For Dealy</a>
-                                            <a href="projectDetails.html" class="dropdown-item">Hold Request</a>
-                                            <a href="projectDetails.html" class="dropdown-item">Duplicate File
-                                                Request</a>
-                                            <a href="projectDetails.html" class="dropdown-item">Sample File Update</a>
-                                            <a href="projectDetails.html" class="dropdown-item">Change File Check</a>
-                                            <a href="projectDetails.html" class="dropdown-item">Production Done</a>
-
+                                        <div class="dropdown-menu dropdown-menu-right bg-primary check_project_dropdown">
+                                            <a href="checked_by_projects_details.html" class="dropdown-item ">View Details</a>
                                         </div>
-
                                     </div>
-
                                 </td>
-
-
                             </tr>
                             <tr>
-                                <td>001</td>
-                                <td>Clipping Path</td>
-                                <td>22 Nov 2022 08:00 PM</td>
-                                <td>Medium</td>
-                                <td>Ongoing</td>
-                                <td>Time Over</td>
+                                <td class="text-center">001</td>
+                                <td class="text-center">Images Retouching</td>
+                                <td class="text-center">Pending</td>
+                                <td class="text-center">18</td>
                                 <td class="text-center">:</td>
                             </tr>
-                            <tr>
-                                <td>001</td>
-                                <td>Clipping Path</td>
-                                <td>22 Nov 2022 08:00 PM</td>
-                                <td>Medium</td>
-                                <td>Ongoing</td>
-                                <td>Time Over</td>
-                                <td class="text-center">:</td>
-                            </tr>
-                            <tr>
-                                <td>001</td>
-                                <td>Clipping Path</td>
-                                <td>22 Nov 2022 08:00 PM</td>
-                                <td>Medium</td>
-                                <td>Ongoing</td>
-                                <td>Time Over</td>
-                                <td class="text-center">:</td>
-                            </tr>
-                            <tr>
-                                <td>001</td>
-                                <td>Clipping Path</td>
-                                <td>22 Nov 2022 08:00 PM</td>
-                                <td>Medium</td>
-                                <td>Ongoing</td>
-                                <td>Time Over</td>
-                                <td class="text-center">:</td>
-                            </tr>
-                            <tr>
-                                <td>001</td>
-                                <td>Clipping Path</td>
-                                <td>22 Nov 2022 08:00 PM</td>
-                                <td>Medium</td>
-                                <td>Ongoing</td>
-                                <td>Time Over</td>
-                                <td class="text-center">:</td>
-                            </tr>
-                            <tr>
-                                <td>001</td>
-                                <td>Clipping Path</td>
-                                <td>22 Nov 2022 08:00 PM</td>
-                                <td>Medium</td>
-                                <td>Ongoing</td>
-                                <td>Time Over</td>
-                                <td class="text-center">:</td>
-                            </tr>
+                           
 
 
                         </tbody>
@@ -287,14 +226,14 @@
                 </div>
             </div>
             <!-- data table end  -->
+
         </section>
     </main>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
     <script src="js/custom.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
