--- a/checked_by_projects_details.html
+++ b/checked_by_projects_details.html
@@ -45,17 +45,16 @@
                         <span class="ml-2">Assign Details</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link active_sidnav" href="mywork.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/sidebar_icon/Shape (2).png" alt=""
-                            class="sidebar-icon-image active-sidebar-icon-image">
+                        <img src="assets/sidebar_icon/Shape (2).png" alt="" class="sidebar-icon-image">
                         <span class="ml-2">My Work</span>
                     </div>
                 </a>
 
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link active_sidnav" href="#">
                     <div class="link-icon">
-                        <img src="assets/sidebar_icon/Shape (1).png" alt="" class="sidebar-icon-image">
+                        <img src="assets/sidebar_icon/Shape (1).png" alt="" class="sidebar-icon-image active-sidebar-icon-image">
                         <span class="ml-2">Checked By Projects</span>
                     </div>
                 </a>
@@ -102,8 +101,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link active menu-link mr-2  active_top_nav" aria-current="page"
-                                href="#">Project</a>
+                            <a class="nav-link active menu-link mr-2 active_top_nav" aria-current="page"
+                                href="/project.html">Project</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Client</a>
@@ -179,22 +178,22 @@
 
             <div class="mx-4 mt-3">
                 <div class="all-project-title mb-3">
-                    All Project
+                    All Folder & Files
                 </div>
+              
 
-                <div class="mywork-container">
+                <div class="all-project-container">
                     <!-- all project sidebar menu start -->
-                    <div class="all-project-sidebar text-center">
+                    <div class="all-project-sidebar">
                         <div class="mb-2 mt-3">
-                            <a href="#" class="nav-link active">OCP1680006 (Cli...</a>
+                            <a href="#" class="nav-link active">OCP1680006</a>
                         </div>
                         <div class="mb-2 mt-3">
-                            <a href="#" class="nav-link active">OCP1680006 (Cli...</a>
+                            <a href="#" class="nav-link active">OCP1680006</a>
                         </div>
                         <div class="mb-2 mt-3">
-                            <a href="#" class="nav-link active">OCP1680006 (Cli...</a>
+                            <a href="#" class="nav-link active">OCP1680006</a>
                         </div>
-
 
 
                     </div>
@@ -237,13 +236,8 @@
                                                     <button class="dropdown-item" type="button">Duplicate File
                                                         Request</button>
                                                 </div>
-
                                             </div>
-
                                         </div>
-
-
-
                                     </div>
 
                                 </div>
@@ -279,17 +273,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- upload file module end  -->
-
-                            <!--project amin content top nav var end  -->
-
                             <!-- project show in picture start -->
-                            <div class="mywork-image-folder mx-4 mt-4">
+                            <div class="project-image-folder mx-4 mt-4">
                                 <div class="image-container">
                                     <img src="assets/All Project/vector1111.png" alt="" class="project-image">
                                     <div class="mt-4 d-flex justify-content-around align-items-center">
                                         <p class="mt-2">Lorem ipsum</p>
-                                        <img src="assets/All Project//vector-details.png" alt="">
+                                        <img src="assets/All Project//vector-details.png" alt=""
+                                            class="project-details-icon">
                                     </div>
 
                                 </div>
@@ -297,7 +288,8 @@
                                     <img src="assets/All Project/vector1111.png" alt="" class="project-image">
                                     <div class="mt-4 d-flex justify-content-around align-items-center">
                                         <p class="mt-2">Lorem ipsum</p>
-                                        <img src="assets/All Project//vector-details.png" alt="">
+                                        <img src="assets/All Project//vector-details.png" alt=""
+                                            class="project-details-icon">
                                     </div>
 
                                 </div>
@@ -305,7 +297,8 @@
                                     <img src="assets/All Project/vector1111.png" alt="" class="project-image">
                                     <div class="mt-4 d-flex justify-content-around align-items-center">
                                         <p class="mt-2">Lorem ipsum</p>
-                                        <img src="assets/All Project//vector-details.png" alt="">
+                                        <img src="assets/All Project//vector-details.png" alt=""
+                                            class="project-details-icon">
                                     </div>
 
                                 </div>
@@ -313,7 +306,8 @@
                                     <img src="assets/All Project/vector1111.png" alt="" class="project-image">
                                     <div class="mt-4 d-flex justify-content-around align-items-center">
                                         <p class="mt-2">Lorem ipsum</p>
-                                        <img src="assets/All Project//vector-details.png" alt="">
+                                        <img src="assets/All Project//vector-details.png" alt=""
+                                            class="project-details-icon">
                                     </div>
 
                                 </div>
@@ -324,102 +318,24 @@
                     </div>
                     <!-- all project main contenter end -->
 
-                    <div class="mywork-side-details">
+                    <div class="project-side-details">
+                        <div class="d-flex justify-content-end mt-2 mb-5">
+                            <img src="assets/All Project/close-btn.png" alt="" class="close-button">
+                        </div>
 
-                        <div class="date-time">
-                            <div class="task-timer">
-                                TASK TIMER
-                            </div>
-                            <div class="calendar d-flex justify-content-around">
-                                <div class="day mr-2">Mon</div>
-                                <div class="day mr-1">Tue</div>
-                                <div class="day mr-1">Wed</div>
-                                <div class="day mr-1">Thu</div>
-                                <div class="day mr-1">Fri</div>
-                                <div class="day mr-1">Sat</div>
-                                <div class="day">Sun</div>
-                            </div>
-
-                            <div class="current-time mt-4">
-                                <p id="currentDate"></p>
+                        <div class="d-flex justify-content-center">
+                            <div class="image-container-details">
+                                <img src="assets/All Project/vector1111.png" alt="" class="project-image">
+                                <p class="mt-2">Lorem ipsum</p>
                             </div>
                         </div>
 
                         <div class="mt-3 details-text ml-3">
-                            <p class="mb-3 mt-2 task-timer">TASK DETAILS</p>
-                            <!-- modal task-1  -->
-                            <div class="d-flex">
-                                <div>
-                                    <p> Instruction:</p>
-                                </div>
-                                <!-- Instruction Modual -->
-                                <div class="ml-1">
-
-                                    <p id="openModal-instruction">view</p>
-
-                                    <div id="modal-instruction">
-                                        <div class="modal-content modeal-content-instraction">
-                                            <div class="modal-Instruction-title">
-                                                <span class="instruction-close-btn mt-2">&times;</span>
-                                                <h2 class="mt-2">Modal Title</h2>
-                                            </div>
-                                            <div class="text-center p-2">
-                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. At error
-                                                voluptas exercitationem ducimus qui magni. Consequuntur, nihil! Sunt
-
-                                            </div>
-                                            <div class="my-2 mr-3 d-flex justify-content-end">
-                                                <button class="close-modual-btn">Close</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Note Modal 2 -->
-                            <div class="d-flex">
-                                <div>
-                                    <p> Note:</p>
-                                </div>
-                                <div class="ml-1">
-                                    <p id="note-openModal">view</p>
-                                    <div id="note-modal">
-                                        <div class="note-modal-content">
-                                            <div class="not-modal-title">
-                                                <span class="note-close-btn mt-2">&times;</span>
-                                                <h2 class="mt-2">Modal Title</h2>
-                                            </div>
-                                            <div class="text-center p-2">
-                                                <p>FOR CLIPPING</p>
-                                            </div>
-                                            <div class="my-2 mr-3 d-flex justify-content-end">
-                                                <button class="close-modual-btn">Close</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div>
-                                <p>Sample File:</p>
-                            </div>
-                            <div>
-                                <p>Task: <span>Clipping Path</span></p>
-                            </div>
-                            <div>
-                                <p>Priority: <span>Start Work</span></p>
-                            </div>
-                            <div>
-                                <p>Duration: <span>300 minutes</span></p>
-                            </div>
-                            <div>
-                                <p>Start Time:</p>
-                                <p>MM/DD/YYYY</p>
-                                <p>XX:XX:XX AM</p>
-                            </div>
-
-
-
+                            <p class="mb-3 mt-4">Type: Folder</p>
+                            <p>Image Quantity: 26</p>
+                            <p>Size: 150 Byte</p>
+                            <p>Date Created: <br> MM/DD/YYYY <br> XX:XX:XX AM</p>
+                            <p>Date Modified: <br> MM/DD/YYYY <br> XX:XX:XX AM</p>
                         </div>
                     </div>
                 </div>
@@ -430,12 +346,12 @@
         </section>
     </main>
 
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
     <script src="js/custom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
