--- a/client_Dashboard.html
+++ b/client_Dashboard.html
@@ -203,7 +203,7 @@
                             <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Project</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Client</a>
+                            <a class="nav-link active menu-link mr-2 active_top_nav" aria-current="page" href="client_Dashboard.html">Client</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active menu-link mr-2" aria-current="page" href="#">User</a>
