--- a/common.html
+++ b/common.html
@@ -183,8 +183,8 @@
                                     <img src="assets/chat/Shape2.png" alt="">
                                 </a>
                             </div>
-                            <div class="mt-1 create-group">
-                                <img src="assets/All Project/list-icon.png" alt="" class="ml-2">
+                            <div class="mt-2 create-group">
+                                <i class="fa-solid fa-plus fa-xl ml-2"></i>
                             </div>
                         </div>
                     </form>
@@ -201,7 +201,6 @@
                     <div class="mx-4 d-flex justify-content-between align-items-center mb-4 chat_person_name">
                         <div class="chat-person-images d-flex align-items-center">
                             <div>
-                                <img src="assets/card/Frame 629447.png" alt="" class="hover-image">
                                 <img src="assets/RICSU 1.png" alt="" class="">
                             </div>
                             <div class="chat-person-name ml-3" id="chat-details">
@@ -293,7 +292,7 @@
 
                     <div class="mx-3 mb-3">
                         <div class="input-group">
-                            <textarea placeholder="Type your message..." class="form-control rounded " id="chat_textarea"></textarea>
+                            <textarea placeholder="Type your message..." class="form-control rounded mr-2" id="chat_textarea"></textarea>
                             <button type="button" class="btn btn-primary">
                                 <i class="fa-solid fa-greater-than fa-sm" style="color: #e5e7eb;"></i>
                             </button>
