--- a/projectDetails.html
+++ b/projectDetails.html
@@ -101,7 +101,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link active menu-link mr-2" aria-current="page"
+                            <a class="nav-link active menu-link mr-2 active_top_nav" aria-current="page"
                                 href="/project.html">Project</a>
                         </li>
                         <li class="nav-item">
