--- a/uploadImages.html
+++ b/uploadImages.html
@@ -200,7 +200,7 @@
                             <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Project</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Client</a>
+                            <a class="nav-link active menu-link mr-2 active_top_nav" aria-current="page" href="#">Client</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active menu-link mr-2" aria-current="page" href="#">User</a>
