--- a/common.html
+++ b/common.html
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div class="live-chat">
-                <p id="open_chat">Live Chat <span>(10)</span></p>
+                <p class="open_chat">Live Chat <span>(10)</span></p>
                 <img src="assets/animation_500_le8y4owf 1.svg" alt="">
             </div>
 
@@ -168,7 +168,7 @@
 
 
             <!-- chat start  -->
-            <div id="chat_content" class="hidden_chat">
+            <div  class="hidden_chat chat_content">
                 <div class="d-flex justify-content-between align-items-center chat-title">
                     <div>Your Chat</div>
                     <div class="chat-close-btn"><img src="assets/chat/vector.png" alt=""></div>
@@ -203,7 +203,7 @@
                             <div>
                                 <img src="assets/RICSU 1.png" alt="" class="">
                             </div>
-                            <div class="chat-person-name ml-3" id="chat-details">
+                            <div class="chat-person-name ml-3 chat-details">
                                 <p>Lorem ipsum</p>
                                 <h6>Lorem ipsum dolor sit.</h6>
                             </div>
@@ -303,11 +303,11 @@
             <!-- chat details start for a person -->
 
             <!-- Create Group fro chat  start-->
-            <div id="group-modal-overlay">
+            <div class="group-modal-overlay">
                 <div id="group-modal">
                     <div class="d-flex justify-content-between align-items-center group-title">
                         <h5>Create Group</h5>
-                        <span id="group-modal-close" class="modal-group-icon">&times;</span>
+                        <span  class="modal-group-icon group-modal-close">&times;</span>
                     </div>
 
                     <form action="" class="mx-3 my-3">
