--- a/Mywork.html
+++ b/Mywork.html
@@ -232,7 +232,7 @@
                                                 <div class="dropdown-menu dropdown-menu-right">
                                                     <button class="dropdown-item" type="button">Hold</button>
                                                     <button class="dropdown-item" type="button">Download</button>
-                                                    <button id="modal-trigger" class="dropdown-item"
+                                                    <button  class="dropdown-item modal-trigger"
                                                         type="button">Upload File</button>
                                                     <button class="dropdown-item" type="button">Duplicate File
                                                         Request</button>
@@ -249,11 +249,11 @@
                                 </div>
                             </div>
                             <!-- upload file module  start-->
-                            <div id="modal-overlay">
+                            <div class="modal-overlay">
                                 <div id="modal">
                                     <div class="d-flex justify-content-between align-items-center uploadm-title">
                                         <h5>Upload</h5>
-                                        <span id="modal-close" class="modal-close-icon">&times;</span>
+                                        <span  class="modal-close-icon modal-close">&times;</span>
                                     </div>
 
                                     <div class="mt-3 mx-3">
@@ -274,8 +274,8 @@
                                     <hr>
 
                                     <div class="d-flex justify-content-end mr-3 pb-3">
-                                        <button class="upload-btn upload-btn1">Cencle</button>
-                                        <button id="modal-close" class="ml-2 upload-btn2">upload</button>
+                                        <button class="upload-btn upload-btn1 modal-close">Cencle</button>
+                                        <button  class="ml-2 upload-btn2">upload</button>
                                     </div>
                                 </div>
                             </div>
@@ -355,9 +355,8 @@
                                 <!-- Instruction Modual -->
                                 <div class="ml-1">
 
-                                    <p id="openModal-instruction">view</p>
-
-                                    <div id="modal-instruction">
+                                    <p class="openModal-instruction">view</p>
+                                    <div class="modal-instruction">
                                         <div class="modal-content modeal-content-instraction">
                                             <div class="modal-Instruction-title">
                                                 <span class="instruction-close-btn mt-2">&times;</span>
@@ -382,8 +381,8 @@
                                     <p> Note:</p>
                                 </div>
                                 <div class="ml-1">
-                                    <p id="note-openModal">view</p>
-                                    <div id="note-modal">
+                                    <p class="note-openModal">view</p>
+                                    <div class="note-modal">
                                         <div class="note-modal-content">
                                             <div class="not-modal-title">
                                                 <span class="note-close-btn mt-2">&times;</span>
