--- a/checked_by_projects_details.html
+++ b/checked_by_projects_details.html
@@ -231,7 +231,7 @@
                                                 <div class="dropdown-menu dropdown-menu-right">
                                                     <button class="dropdown-item" type="button">Hold</button>
                                                     <button class="dropdown-item" type="button">Download</button>
-                                                    <button id="modal-trigger" class="dropdown-item"
+                                                    <button  class="dropdown-item modal-trigger"
                                                         type="button">Upload File</button>
                                                     <button class="dropdown-item" type="button">Duplicate File
                                                         Request</button>
@@ -243,11 +243,11 @@
                                 </div>
                             </div>
                             <!-- upload file module  start-->
-                            <div id="modal-overlay">
+                            <div class="modal-overlay">
                                 <div id="modal">
                                     <div class="d-flex justify-content-between align-items-center uploadm-title">
                                         <h5>Upload</h5>
-                                        <span id="modal-close" class="modal-close-icon">&times;</span>
+                                        <span class="modal-close-icon modal-close">&times;</span>
                                     </div>
 
                                     <div class="mt-3 mx-3">
@@ -268,8 +268,8 @@
                                     <hr>
 
                                     <div class="d-flex justify-content-end mr-3 pb-3">
-                                        <button class="upload-btn upload-btn1">Cencle</button>
-                                        <button id="modal-close" class="ml-2 upload-btn2">upload</button>
+                                        <button class="upload-btn upload-btn1 modal-close">Cencle</button>
+                                        <button  class="ml-2 upload-btn2">upload</button>
                                     </div>
                                 </div>
                             </div>
