--- a/damage_image.html
+++ b/damage_image.html
@@ -12,6 +12,8 @@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.18/css/jquery.dataTables.min.css">
+
+
 </head>
 
 <body>
@@ -211,9 +213,8 @@
                                             :
                                         </a>
                                         <div
-                                            class="dropdown-menu dropdown-menu-right bg-primary check_project_dropdown">
-                                            <a class="dropdown-item text-white" id="modal-trigger">View
-                                                Details</a>
+                                            class="dropdown-menu dropdown-menu-right bg-primary check_project_dropdown modal-trigger">
+                                            <a class="dropdown-item text-white">Approve</a>
                                         </div>
                                     </div>
                                 </td>
@@ -222,23 +223,36 @@
                                 <td>001</td>
                                 <td>Images Retouching</td>
                                 <td>Pending</td>
-                                <td>18</td>
+                                <td>
+                                    <img src="assets/RICSU 1.png" alt="" class="damage_image_td">
+                                </td>
                                 <td>..</td>
-                                <td>:</td>
+                                <td class="text-center">
+                                    <div class="position-lg-relative right-3">
+                                        <a type="button" data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">
+                                            :
+                                        </a>
+                                        <div
+                                            class="dropdown-menu dropdown-menu-right bg-primary check_project_dropdown modal-trigger">
+                                            <a class="dropdown-item text-white">View
+                                                Details</a>
+                                        </div>
+                                    </div>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
             <!-- data table end  -->
-            
-            
+
             <!-- upload file module  start-->
-            <div id="modal-overlay">
+            <div class="modal-overlay">
                 <div id="modal">
                     <div class="d-flex justify-content-between align-items-center uploadm-title">
                         <h5>Approve</h5>
-                        <span id="modal-close" class="modal-close-icon">&times;</span>
+                        <span class="modal-close-icon modal-close">&times;</span>
                     </div>
 
                     <div class="mt-3 mx-3 text-center py-5">
@@ -247,8 +261,8 @@
                     <hr>
 
                     <div class="d-flex justify-content-end mr-3 pb-3">
-                        <button class="upload-btn upload-btn1">Cencle</button>
-                        <button id="modal-close" class="ml-2 upload-btn2">upload</button>
+                        <button class="upload-btn upload-btn1 modal-close">Cencle</button>
+                        <button class="ml-2 upload-btn2 modal-close">upload</button>
                     </div>
                 </div>
             </div>
@@ -258,10 +272,11 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
     <script src="js/custom.js"></script>
+    <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
