--- a/project_List.html
+++ b/project_List.html
@@ -270,11 +270,11 @@
             <!-- nan-munu end -->
 
             <!-- slider data form start  -->
-            <div id="overlay">
-                <div id="content">
+            <div class="overlay">
+                <div class="content">
                     <div class="d-flex justify-content-between align-items-center title">
                         <div>Create project</div>
-                        <div id="close-content">
+                        <div class="close-content">
                             <i class="fa-solid fa-xmark close-icon"></i>
                         </div>
                     </div>
@@ -405,7 +405,7 @@
                 </div>
                 <hr>
                 <div class="Add_FTP">
-                    <button id="show-content" class="btn btn-primary ">Add New</button>
+                    <button  class="btn btn-primary show-content">Add New</button>
                 </div>
 
 
