update project image folder

--- a/checked_by_projects_details.html
+++ b/checked_by_projects_details.html
@@ -273,44 +273,61 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- project show in picture start -->
-                            <div class="project-image-folder mx-4 mt-4">
+                              <!-- project show in picture start -->
+                              <div class="project-image-folder mx-4 mt-4">
                                 <div class="image-container">
-                                    <img src="assets/All Project/vector1111.png" alt="" class="project-image">
-                                    <div class="mt-4 d-flex justify-content-around align-items-center">
-                                        <p class="mt-2">Lorem ipsum</p>
-                                        <img src="assets/All Project//vector-details.png" alt=""
-                                            class="project-details-icon">
+                                    <div class="pt-3">
+                                        <div>
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt="" class="project-image">
+                                        </div>
+                                        <div class="mt-2 d-flex justify-content-around align-items-center">
+                                            <p class="mt-2">Lorem ipsum</p>
+                                            <img src="assets/All Project//vector-details.png" alt=""
+                                                class="project-details-icon">
+                                        </div>
                                     </div>
 
                                 </div>
                                 <div class="image-container">
-                                    <img src="assets/All Project/vector1111.png" alt="" class="project-image">
-                                    <div class="mt-4 d-flex justify-content-around align-items-center">
-                                        <p class="mt-2">Lorem ipsum</p>
-                                        <img src="assets/All Project//vector-details.png" alt=""
-                                            class="project-details-icon">
+                                    <div class="pt-3">
+                                        <div>
+                                            <img src="assets/New folder/ON07047463__ALT01__cosmic rebelrecycled gloss black side (1).jpg" alt="" class="project-image">
+                                        </div>
+                                        <div class="mt-2 d-flex justify-content-around align-items-center">
+                                            <p class="mt-2">Lorem ipsum</p>
+                                            <img src="assets/All Project//vector-details.png" alt=""
+                                                class="project-details-icon">
+                                        </div>
                                     </div>
 
                                 </div>
                                 <div class="image-container">
-                                    <img src="assets/All Project/vector1111.png" alt="" class="project-image">
-                                    <div class="mt-4 d-flex justify-content-around align-items-center">
-                                        <p class="mt-2">Lorem ipsum</p>
-                                        <img src="assets/All Project//vector-details.png" alt=""
-                                            class="project-details-icon">
+                                    <div class="pt-3">
+                                        <div>
+                                            <img src="assets/New folder/OCP Design14.jpg" alt="" class="project-image">
+                                        </div>
+                                        <div class="mt-2 d-flex justify-content-around align-items-center">
+                                            <p class="mt-2">Lorem ipsum</p>
+                                            <img src="assets/All Project//vector-details.png" alt=""
+                                                class="project-details-icon">
+                                        </div>
                                     </div>
 
                                 </div>
                                 <div class="image-container">
-                                    <img src="assets/All Project/vector1111.png" alt="" class="project-image">
-                                    <div class="mt-4 d-flex justify-content-around align-items-center">
-                                        <p class="mt-2">Lorem ipsum</p>
-                                        <img src="assets/All Project//vector-details.png" alt=""
-                                            class="project-details-icon">
+                                    <div class="pt-3">
+                                        <div>
+                                            <img src="assets/New folder/ON07095660__ALT05__4129116214_dt5.jpg" alt="" class="project-image">
+                                        </div>
+                                        <div class="mt-2 d-flex justify-content-around align-items-center">
+                                            <p class="mt-2">Lorem ipsum</p>
+                                            <img src="assets/All Project//vector-details.png" alt=""
+                                                class="project-details-icon">
+                                        </div>
                                     </div>
 
                                 </div>
+                           
 
                             </div>
                             <!-- project show in picture end -->
@@ -325,7 +342,9 @@
 
                         <div class="d-flex justify-content-center">
                             <div class="image-container-details">
-                                <img src="assets/All Project/vector1111.png" alt="" class="project-image">
+                                <div class="mt-3">
+                                    <img src="assets/New folder/ON07095660__ALT05__4129116214_dt5.jpg" alt="" class="project-image">
+                                </div>
                                 <p class="mt-2">Lorem ipsum</p>
                             </div>
                         </div>
